# linux_driver

./: .clang-format  .editorconfig  Kbuild  LICENSE  README.md
uart/: Kbuild  Makefile  README.md
uart/doc/: vn29a80_ICD.md  vn29a80_driver_design.md
uart/include/: counter_vn29a80.h
uart/sim/: logger.py  string_utils.py  vn29a80.py
uart/src/: drv.c  uart.c  uartdev_core.h  uif.c  vn29a80.h  vn29a80_drv.c  vn29a80_req.c  vn29a80_res.c  vn29a80_uart.c  vn29a80_uif.c
uart/test/: CMakeLists.txt  Makefile  vn29a80_driver_testcases.cpp  vn29a80_driver_tester.cpp  vn29a80_driver_tester.hpp
